# LibreAgent

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KEYS  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
ci/abi/: 4.x-baseline.txt
ci/scripts/: abi-snapshot.sh
cmake/: GitVersion.cmake  InstallExport.cmake  LibreAgentConfig.cmake.in
include/LibreSCRS/Agent/: AgentCore.h  CryptoWorkerContext.h  Identity.h  OperationPhase.h  OperationState.h  PresenceTypes.h  Reply.h
include/LibreSCRS/Agent/backend/: AgentTransport.h  Authorizer.h  Logging.h  OperationChannel.h  PromptTypes.h  PrompterClientBase.h  PrompterWire.h
include/LibreSCRS/Agent/cache/: CardReadCache.h  CredentialCache.h  CredentialSnapshotCache.h
include/LibreSCRS/Agent/config/: ConfigStore.h
include/LibreSCRS/Agent/crypto/: Mechanism.h
include/LibreSCRS/Agent/operations/: CardPluginRouting.h  CardSessionHolder.h  CertDerExport.h  CertReadFlow.h  CredentialListFlow.h  FlowPrelude.h  IdentityReadFlow.h  KeyActivationFlow.h  LmRawCrypto.h  LmSeams.h  OperationBase.h  OperationManager.h  PinChangeFlow.h  PromptSerializer.h  PropertyEmissionThrottler.h  RateLimiter.h  RawCryptoFlow.h  RsaPublicKey.h  Seams.h  SerializingPrompter.h  SignFlow.h  SignGate.h  SignatureParams.h  SigningEngineProvider.h
include/LibreSCRS/Agent/pkcs11/: LeaseManager.h  Pkcs11Broker.h
include/LibreSCRS/Agent/presence/: CapabilityResolver.h  CardKeyTracker.h  MonitorBridge.h  ObjectRegistry.h  PluginCapabilityResolver.h  PresenceModel.h
include/LibreSCRS/Agent/util/: CallerLabel.h  HexEncode.h  Sha256Hex.h
include/LibreSCRS/Agent/value/: CardInfo.h  CardReadSnapshot.h  CertSnapshot.h  CredentialRecord.h  ErrorTaxonomy.h
src/: AgentCore.cpp
src/backend/: Logging.cpp
src/cache/: CardReadCache.cpp  CredentialCache.cpp  CredentialSnapshotCache.cpp
src/config/: ConfigStore.cpp
src/operations/: CardSessionHolder.cpp  CertDerExport.cpp  CertReadFlow.cpp  CredentialListFlow.cpp  FlowPrelude.cpp  IdentityReadFlow.cpp  KeyActivationFlow.cpp  LmRawCrypto.cpp  LmSeams.cpp  OperationBase.cpp  OperationManager.cpp  PinChangeFlow.cpp  PromptSerializer.cpp  PropertyEmissionThrottler.cpp  RateLimiter.cpp  RawCryptoFlow.cpp  RsaPublicKey.cpp  SignFlow.cpp  SigningEngineProvider.cpp
src/pkcs11/: LeaseManager.cpp  Pkcs11Broker.cpp
src/presence/: CardKeyTracker.cpp  MonitorBridge.cpp  ObjectRegistry.cpp  PluginCapabilityResolver.cpp  PresenceModel.cpp
src/util/: Sha256Hex.cpp
src/value/: ErrorTaxonomy.cpp
tests/: AgentCoreWiringTest.cpp  AgentShutdownUnderLoadTest.cpp  AuthorizerTest.cpp  CMakeLists.txt  CacheScrubOnRemovalTest.cpp  CallerLabelTest.cpp  CardKeyTrackerTest.cpp  CardPluginRoutingTest.cpp  CardReadCacheTest.cpp  CardReadSnapshotTest.cpp  CardSessionHolderTest.cpp  CertDerExportTest.cpp  CertReadFlowTest.cpp  ConfigStoreTest.cpp  CredentialCacheRequestTest.cpp  CredentialCacheTest.cpp  CredentialErrorMappingTest.cpp  CredentialListFlowTest.cpp  CredentialRecordTest.cpp  CredentialSeamTest.cpp  CredentialSnapshotCacheTest.cpp  ErrorTaxonomyTest.cpp  FakeBackendsTest.cpp  IdentityReadFlowTest.cpp  IdentityTest.cpp  KeyActivationFlowTest.cpp  LeaseManagerTest.cpp  LmCertReaderKatTest.cpp  LmRawCryptoTest.cpp  LmSeamsCompileTest.cpp  LmSeamsRoutingTest.cpp  LoggingTest.cpp  ObjectRegistryTest.cpp  OperationBaseTest.cpp  OperationManagerTest.cpp  OperationPhaseTest.cpp  PinChangeFlowTest.cpp  Pkcs11BrokerTest.cpp  Pkcs11BrokerTestSupport.h  Pkcs11LeaseInvalidationTest.cpp  (+19 more)
tests/fakes/: FakeAgentTransport.h  FakeAuthorizer.h  FakeCredentialManager.h  FakeLogSink.h  FakeOperationChannel.h  FakePrompter.h  PinStubPlugin.h
tests/pkgsmoke/: CMakeLists.txt  main.cpp
